--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -15,7 +15,7 @@ div {
 #header {
   height: 40px;
   width: 100%;
-  background-color: #0b7d52;
+  background-color: #de7d15;
   position: fixed;
   z-index: 1;
 }
